Update package docs

--- a/docs/content/en/docs/reference/packagespec/cert-manager/v1.9.1.md
+++ b/docs/content/en/docs/reference/packagespec/cert-manager/v1.9.1.md
@@ -13,7 +13,7 @@ apiVersion: packages.eks.amazonaws.com/v1alpha1
 kind: Package
 metadata:
   name: my-cert-manager
-  namespace: eksa-packages
+  namespace: eksa-packages-<cluster-name>
 spec:
   packageName: cert-manager
   config: | 
