--- a/docs/content/en/docs/reference/packagespec/metallb/v0.12.1.md
+++ b/docs/content/en/docs/reference/packagespec/metallb/v0.12.1.md
@@ -17,7 +17,7 @@ apiVersion: packages.eks.amazonaws.com/v1alpha1
 kind: Package
 metadata:
   name: mylb
-  namespace: eksa-packages
+  namespace: eksa-packages-<cluster-name>
 spec:
   packageName: metallb
   targetNamespace: metallb-system
