--- a/docs/content/en/docs/reference/packagespec/adot/v0.21.1.md
+++ b/docs/content/en/docs/reference/packagespec/adot/v0.21.1.md
@@ -13,7 +13,7 @@ apiVersion: packages.eks.amazonaws.com/v1alpha1
 kind: Package
 metadata:
   name: my-adot
-  namespace: eksa-packages
+  namespace: eksa-packages-<cluster-name>
 spec:
   packageName: adot
   targetNamespace: observability
