Address doc comments

--- a/docs/content/en/docs/reference/packagespec/prometheus/v2.39.1.md
+++ b/docs/content/en/docs/reference/packagespec/prometheus/v2.39.1.md
@@ -56,8 +56,8 @@ spec:
 | server.persistentVolume.existingClaim | Specifies prometheus-server data Persistent Volume existing claim name. It requires `server.persistentVolume.enabled: true`. If defined, PVC must be created manually before volume will be bound | `""` |
 | server.persistentVolume.size | Specifies prometheus-server data Persistent Volume size | `"8Gi"` |
 | server.remoteRead | Specifies prometheus-server remote read configs. Refer to Prometheus docs [remote_read](https://prometheus.io/docs/prometheus/latest/configuration/configuration/#remote_read) for more details | `[]` |
-| server.remoteRead | Specifies prometheus-server remote write configs. Refer to Prometheus docs [remote_write](https://prometheus.io/docs/prometheus/latest/configuration/configuration/#remote_write) for more details | `[]` |
-| server.replicaCount | Specifies the replicaCount for prometheus-server deployment / statefulSet. **Note `server.statefulSet.enabled` should be set to `true` if `server.replicaCount` is greater than `1`**  | `1` |
+| server.remoteWrite | Specifies prometheus-server remote write configs. Refer to Prometheus docs [remote_write](https://prometheus.io/docs/prometheus/latest/configuration/configuration/#remote_write) for more details | `[]` |
+| server.replicaCount | Specifies the replicaCount for prometheus-server deployment / statefulSet. **Note:** `server.statefulSet.enabled` should be set to `true` if `server.replicaCount` is greater than `1`  | `1` |
 | server.resources | Specifies resource requests and limits of the prometheus-server container. Refer to the Kubernetes API documentation [ResourceRequirements](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.24/#resourcerequirements-v1-core) field for more details | `{}` |
 | server.retention | Prometheus-server data retention period | `"15d"` |
 | server.statefulSet.enabled | Indicates if prometheus-server is deployed as a statefulSet. If set to `false`, prometheus-server will be deployed as a deployment | `false` |
