change registry.relativeurls default value to true (#4315)
* change registry.relativeurls default value to true

* fix formatting

* minor

--- a/docs/content/en/docs/reference/packagespec/harbor/v2.5.1.md
+++ b/docs/content/en/docs/reference/packagespec/harbor/v2.5.1.md
@@ -57,3 +57,5 @@ The following table lists the configurable parameters of the Harbor package spec
 | `trivy.severity`                                                     | Comma-separated list of severities to be checked                                                                                                                                                                                                                                                                                                                                                                                                                  | `UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL`    |
 | `trivy.skipUpdate`                                                   | The flag to disable [Trivy DB](https://github.com/aquasecurity/trivy-db) downloads from GitHub                                                                                                                                                                                                                                                                                                                                                                                                    | `false`                               |
 | `trivy.offlineScan`                                                  | The flag prevents Trivy from sending API requests to identify dependencies.                                                                                                                                                                                                                                                                                                                                                                                       | `false`                               |
+| **Registry**                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |                                       |
+| `registry.relativeurls`                                                | If true, the registry returns relative URLs in Location headers. The client is responsible for resolving the correct URL. Needed if harbor is behind a reverse proxy                                                                                                                                                                                                                                                                                                                                                                            | `true`                               |
