update registry.relativeurls default value

--- a/docs/content/en/docs/reference/packagespec/harbor/v2.5.1.md
+++ b/docs/content/en/docs/reference/packagespec/harbor/v2.5.1.md
@@ -58,4 +58,4 @@ The following table lists the configurable parameters of the Harbor package spec
 | `trivy.skipUpdate`                                                   | The flag to disable [Trivy DB](https://github.com/aquasecurity/trivy-db) downloads from GitHub                                                                                                                                                                                                                                                                                                                                                                                                    | `false`                               |
 | `trivy.offlineScan`                                                  | The flag prevents Trivy from sending API requests to identify dependencies.                                                                                                                                                                                                                                                                                                                                                                                       | `false`                               |
 | **Registry**                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |                                       |
-| `registry.relativeurls`                                                | If true, the registry returns relative URLs in Location headers. The client is responsible for resolving the correct URL. Needed if harbor is behind a reverse proxy                                                                                                                                                                                                                                                                                                                                                                            | `true`                               |
+| `registry.relativeurls`                                                | If true, the registry returns relative URLs in Location headers. The client is responsible for resolving the correct URL. Needed if harbor is behind a reverse proxy                                                                                                                                                                                                                                                                                                                                                                            | `false`                               |
