--- a/docs/content/en/docs/reference/packagespec/harbor/v2.5.0.md
+++ b/docs/content/en/docs/reference/packagespec/harbor/v2.5.0.md
@@ -50,4 +50,4 @@ The following table lists the configurable parameters of the Harbor package spec
 | `persistence.persistentVolumeClaim.redis.size`                       | The size of the volume. If an external Redis is used, the setting will be ignored                                                                                                                                                                                                                                                                                                                                                                                    | `1Gi`                                 |
 | `persistence.persistentVolumeClaim.redis.storageClass`               | Specify the `storageClass` used to provision the volumem, or the default StorageClass will be used (the default). Set it to `-` to disable dynamic provisioning. If an external Redis is used, the setting will be ignored                                                                                                                                                                                                                                            |                   ""                  |
 | **Registry**                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |                                       |
-| `registry.relativeurls`                                                | If true, the registry returns relative URLs in Location headers. The client is responsible for resolving the correct URL. Needed if harbor is behind a reverse proxy                                                                                                                                                                                                                                                                                                                                                                            | `true`                               |
+| `registry.relativeurls`                                                | If true, the registry returns relative URLs in Location headers. The client is responsible for resolving the correct URL. Needed if harbor is behind a reverse proxy                                                                                                                                                                                                                                                                                                                                                                            | `false`                               |
