--- a/docs/content/en/docs/reference/packagespec/adot/v0.21.1.md
+++ b/docs/content/en/docs/reference/packagespec/adot/v0.21.1.md
@@ -9,7 +9,7 @@ description: >
 
 #### Example
 
-We included a sample configuration below for reference. For in-depth examples and and use cases, please refer to [ADOT workshop.]({{< relref "../../../workshops/packages/adot" >}})
+We included a sample configuration below for reference. For in-depth examples and use cases, please refer to [ADOT workshop.]({{< relref "../../../workshops/packages/adot" >}})
 
 ```
 apiVersion: packages.eks.amazonaws.com/v1alpha1
