Add ADOT workshop reference in packagespec (#4335)
* Add ADOT workshop reference in packagespec

* Update docs/content/en/docs/reference/packagespec/adot/v0.21.1.md

Co-authored-by: Abhinav Pandey <abhinavmpandey08@gmail.com>

* Update docs/content/en/docs/reference/packagespec/adot/v0.23.0.md

Co-authored-by: Abhinav Pandey <abhinavmpandey08@gmail.com>

Co-authored-by: Abhinav Pandey <abhinavmpandey08@gmail.com>

--- a/docs/content/en/docs/reference/packagespec/adot/v0.21.1.md
+++ b/docs/content/en/docs/reference/packagespec/adot/v0.21.1.md
@@ -8,6 +8,9 @@ description: >
 ### Configuring ADOT in EKS Anywhere package spec
 
 #### Example
+
+We included a sample configuration below for reference. For in-depth examples and use cases, please refer to [ADOT workshop.]({{< relref "../../../workshops/packages/adot" >}})
+
 ```
 apiVersion: packages.eks.amazonaws.com/v1alpha1
 kind: Package
