--- a/docs/content/en/docs/reference/packagespec/adot/v0.23.0.md
+++ b/docs/content/en/docs/reference/packagespec/adot/v0.23.0.md
@@ -8,6 +8,9 @@ description: >
 ### Configuring ADOT in EKS Anywhere package spec
 
 #### Example
+
+We included a sample configuration below for reference. For in-depth examples and use cases, please refer to [ADOT workshop.]({{< relref "../../../workshops/packages/adot" >}})
+
 ```
 apiVersion: packages.eks.amazonaws.com/v1alpha1
 kind: Package
