Update Prometheus packagespec doc (#4340)
* Update Prometheus packagespec doc

* Update prometheus packagespec doc server port

--- a/docs/content/en/docs/reference/packagespec/prometheus/v2.39.1.md
+++ b/docs/content/en/docs/reference/packagespec/prometheus/v2.39.1.md
@@ -59,15 +59,16 @@ spec:
 | server.remoteWrite | Specifies prometheus-server remote write configs. Refer to Prometheus docs [remote_write](https://prometheus.io/docs/prometheus/latest/configuration/configuration/#remote_write) for more details | `[]` |
 | server.replicaCount | Specifies the replicaCount for prometheus-server deployment / statefulSet. **Note:** `server.statefulSet.enabled` should be set to `true` if `server.replicaCount` is greater than `1`  | `1` |
 | server.resources | Specifies resource requests and limits of the prometheus-server container. Refer to the Kubernetes API documentation [ResourceRequirements](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.24/#resourcerequirements-v1-core) field for more details | `{}` |
-| server.retention | Prometheus-server data retention period | `"15d"` |
+| server.retention | Specifies prometheus-server data retention period | `"15d"` |
+| server.service | Specifies how to expose prometheus-server as a network service | See footnote [^3] |
 | server.statefulSet.enabled | Indicates if prometheus-server is deployed as a statefulSet. If set to `false`, prometheus-server will be deployed as a deployment | `false` |
-| serverFiles."prometheus.yml".scrape_configs | Specifies a set of targets and parameters for prometheus-server describing how to scrape them. Refer to Prometheus docs [scrape_config](https://prometheus.io/docs/prometheus/latest/configuration/configuration/#scrape_config) for more details | See footnote [^3] |
+| serverFiles."prometheus.yml".scrape_configs | Specifies a set of targets and parameters for prometheus-server describing how to scrape them. Refer to Prometheus docs [scrape_config](https://prometheus.io/docs/prometheus/latest/configuration/configuration/#scrape_config) for more details | See footnote [^4] |
 | serviceAccounts.server.annotations | Specifies prometheus-server service account annotations | `{}` |
 | serviceAccounts.server.create | Indicates if prometheus-server service account will be created | `true` |
 | serviceAccounts.server.name | Specifies prometheus-server service account name | `""` |
 
 [^1]:
-    Node-exporter is exposed as a clusterIP with `hostPort: 9100` and `servicePort: 9100` by default. Note the annotation `prometheus.io/scrape: "true"` is mandatory in order for node-exporter to be discovered by prometheus-server as a scrape target. See below specification for details.
+    Node-exporter service is exposed as a `clusterIP` with `port: 9100` (controlled by `nodeExporter.service.servicePort` below) and `targetPort: 9100` (controlled by `nodeExporter.service.hostPort` below) by default. Note the annotation `prometheus.io/scrape: "true"` is mandatory in order for node-exporter to be discovered by prometheus-server as a scrape target. See below specification for details.
       ```yaml
       apiVersion: packages.eks.amazonaws.com/v1alpha1
       kind: Package
@@ -86,7 +87,7 @@ spec:
       ```
   
 [^2]:
-    Node-exporter has the following toleration by default, which allows daemonSet to be scheduled on control plane node.
+    Node-exporter pods have the following toleration by default, which allows daemonSet to be scheduled on control plane node.
       ```yaml
       apiVersion: packages.eks.amazonaws.com/v1alpha1
       kind: Package
@@ -106,6 +107,21 @@ spec:
       ```
 
 [^3]:
+    Prometheus-server service is exposed as a `clusterIP` with `port: 9090` (controlled by `server.service.servicePort` below) and `targetPort: 9090` (not overridable) by default. See below specification for details.
+      ```yaml
+      apiVersion: packages.eks.amazonaws.com/v1alpha1
+      kind: Package
+      ...
+      spec:
+        config: |
+          server:
+            service:
+              enabled: true
+              servicePort: 9090
+              type: ClusterIP
+      ```
+
+[^4]:
     Prometheus-server by default has the following scrape configs.
       ```yaml
       apiVersion: packages.eks.amazonaws.com/v1alpha1
