--- a/docs/content/en/docs/reference/packagespec/prometheus/v2.39.1.md
+++ b/docs/content/en/docs/reference/packagespec/prometheus/v2.39.1.md
@@ -154,7 +154,7 @@ spec:
                     credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
                   tls_config:
                     ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-                    insecure_skip_verify: true
+                    insecure_skip_verify: false
                   follow_redirects: true
                   enable_http2: true
                   relabel_configs:
@@ -179,7 +179,7 @@ spec:
                     credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
                   tls_config:
                     ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-                    insecure_skip_verify: true
+                    insecure_skip_verify: false
                   follow_redirects: true
                   enable_http2: true
                   relabel_configs:
@@ -214,7 +214,7 @@ spec:
                     credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
                   tls_config:
                     ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-                    insecure_skip_verify: true
+                    insecure_skip_verify: false
                   follow_redirects: true
                   enable_http2: true
                   relabel_configs:
