--- a/docs/content/en/docs/reference/packagespec/credential-provider-package/v0.1.0.md
+++ b/docs/content/en/docs/reference/packagespec/credential-provider-package/v0.1.0.md
@@ -9,7 +9,8 @@ description: >
 
 #### Example
 
-The following is the sample configuration for the credential provider package that is installed by default with the package controller, please refer to [Credential Provider workshop.]({{< relref "../../../workshops/packages/credential-provider-package" >}})
+The following is the sample configuration for the credential provider package that is installed by default with the package controller.
+Please refer to [Credential Provider workshop.]({{< relref "../../../workshops/packages/credential-provider-package" >}})
 
 ```
 apiVersion: packages.eks.amazonaws.com/v1alpha1
