--- a/docs/content/en/docs/reference/packagespec/credential-provider-package/v0.1.0.md
+++ b/docs/content/en/docs/reference/packagespec/credential-provider-package/v0.1.0.md
@@ -43,7 +43,7 @@ spec:
 
 In this example, the credential provider will use the secret provided in aws-secret (created automatically on cluster creation) to authenticate to the repository from which curated package images are pulled. Tolerations were also added so that the control plane nodes would also be configured with authentication.
 
-The secret can exist in two forms, either a base64 encoding of a credential config or individual keys for fields.
+The secret can exist in two forms: either a base64 encoding of a credential config or individual keys for fields.
 
 Example credential
 ```
