--- a/docs/content/en/docs/reference/packagespec/credential-provider-package/v0.1.0.md
+++ b/docs/content/en/docs/reference/packagespec/credential-provider-package/v0.1.0.md
@@ -90,6 +90,6 @@ type: Opaque
 | secretName           | Name of secret that contains the aws credentials                                                                                                                                                                                                                                                           | `"aws-secret"` |
 | profile              | AWS Profile for secretName                                                                                                                                                                                                                                                                                 | `"default"` |
 | matchImages          | List of strings used to match against images. See [here](https://kubernetes.io/docs/tasks/administer-cluster/kubelet-credential-provider/#configure-image-matching) for more info <br/>Example to match against any account across multiple regions for ECR:<br/></pre>`"*.dkr.ecr.*.amazonaws.com"`</pre> | `"[]"` |
-| defaultCacheDuration | Duration the kubelet will cache credentials in-memory. For ECR it is recommended to keep this value less then 12 hours                                                                                                                                                                                     | `"5h"` |
+| defaultCacheDuration | Duration the kubelet will cache credentials in-memory. For ECR it is recommended to keep this value less then 12 hours.                                                                                                                                                                           | `"5h"` |
 
    
